tests/compile_fail/conflicting_generated_configuration.c
#define MFSM_ENABLE_TRACE 0
#include "mfsm.h"

int main(void)
{
    return 0;
}
